# freeaml

./: .clang-format  .travis.sh  .travis.yml  CMakeLists.txt  CNAME  Doxyfile.in  README  README.md
.github/workflows/: documentation-generation.yml  performance-analysis.yml  static-code-analysis.yml  unit-tests.yml
contrib/: CMakeLists.txt
contrib/googletest/include/gtest/internal/: gtest-param-util.h  gtest-port.h
include/: BiconjugateGradientStabilized.h  BidiagonalFactorization.h  CholeskyFactorization.h  ConjugateGradient.h  GaussSeidel.h  GaussianElimination.h  GeneralizedMinimumResidual.h  HessenbergFactorization.h  IncompleteCholeskyConjugateGradient.h  IterativeLinearSystemSolverBase.h  Jacobi.h  Matrix.h  MinimumResidual.h  NormalEquations.h  PLUFactorization.h  QRFactorization.h  QRSolver.h  SparseMatrix.h  SteepestDescent.h  SuccessiveOverRelaxation.h  Vector.h  WeightedJacobi.h  debug.h  rotation.h
include/data_structures/: mat.h  sparse_mat.h  sparse_vec.h  vec.h
include/factorizations/: bidiagonal.h  cholesky.h  hessenberg_house.h  plu.h  plu_pp.h  plu_pp_rec.h  plu_rec.h  qr_cgs.h  qr_givens.h  qr_house.h  qr_mgs.h
include/general/: basic_math.h  debug.h  math.h  rand.h  time.h
include/least_squares/: normal_eqs.h  qr.h
include/linear_systems/: bicgstab.h  cg.h  cg_lanczos.h  gauss_seidel.h  ge_bs.h  ge_pp.h  generic_iter.h  gmres_givens.h  gmres_givens_slow.h  gmres_house.h  gradient.h  ic_cg.h  jacobi.h  jp_cg.h  jp_minres.h  minres.h  sor.h  weighted_jacobi.h
include/math_tools/factorizations/: bidiagonal.h  cholesky.h  hessenberg_house.h  plu.h  plu_pp.h  plu_pp_rec.h  plu_rec.h  qr_cgs.h  qr_givens.h  qr_house.h  qr_mgs.h
include/math_tools/least_squares/: qr.h
include/math_tools/linear_systems/: bicgstab.h  cg.h  cg_lanczos.h  gauss_seidel.h  gebs.h  generic_iter.h  gepp.h  gmres_givens.h  gmres_givens_slow.h  gmres_givens_v2.h  gmres_house.h  gradient.h  iccg.h  jacobi.h  jp_cg.h  jp_minres.h  minres.h  sor.h  weighted_jacobi.h
kpis/: CMakeLists.txt  Matrix.cpp  SparseMatrix.cpp  Vector.cpp  kpi.h
tests/: BiconjugateGradientStabilized.cpp  BidiagonalFactorization.cpp  CMakeLists.txt  CholeskyFactorization.cpp  ConjugateGradient.cpp  GaussSeidel.cpp  GaussianElimination.cpp  GeneralizedMinimumResidual.cpp  HessenbergFactorization.cpp  IncompleteCholeskyConjugateGradient.cpp  Jacobi.cpp  Matrix.cpp  MinimumResidual.cpp  NormalEquations.cpp  PLUFactorization.cpp  QRFactorization.cpp  QRSolver.cpp  SparseMatrix.cpp  SteepestDescent.cpp  SuccessiveOverRelaxation.cpp  Vector.cpp  WeightedJacobi.cpp
tests/googletest/include/gtest/: gtest-death-test.h  gtest.h
tests/googletest/include/gtest/internal/: gtest-param-util-generated.h
tests/googletest/samples/: sample3-inl.h
tests/googletest/src/: gtest-internal-inl.h
